--- a/front/front/src/app/app.component.html
+++ b/front/front/src/app/app.component.html
@@ -1,36 +1,55 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<style>
-  :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-</style>
-
+<!--
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <button mat-icon-button>
+        <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+      </button>
+      <h1>SimpleCRM</h1>
+      <span class="header-spacer"></span>
+      <button mat-icon-button class="header-icon">
+          <mat-icon aria-hidden="false" aria-label="user icon">home</mat-icon>
+      </button>  
+    </mat-toolbar-row>
+  </mat-toolbar>
+  <mat-sidenav-container>
+      <mat-sidenav mode="side" #sidenav opened>
+        <mat-nav-list>
+    
+          <a mat-list-item [routerLink]="'/accounts'"> Accounts </a>
+          <a mat-list-item [routerLink]="'/create-account'"> Create Account </a>
+          <a mat-list-item [routerLink]="'/contacts'"> Contacts </a>
+          <a mat-list-item [routerLink]="'/create-contact'"> Create Contact </a>
+          <a mat-list-item [routerLink]="'/activities'"> Activities </a>
+          <a mat-list-item [routerLink]="'/create-activity'"> Create Activity </a>
+          <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+    
+        </mat-nav-list>
+      </mat-sidenav>
+      <mat-sidenav-content>
+        <div style="height: 88vh;">
+          <app-map></app-map>
+          <router-outlet></router-outlet>
+        </div>
+      </mat-sidenav-content>
+    </mat-sidenav-container>  
 <!-- Toolbar -->
-<app-header></app-header>
+<!--
+<header>
+  <app-header></app-header>
+  <app-sidebar></app-sidebar>
+</header>
 
 <div class="content" role="main">
-
+  
   <app-map></app-map>
 
   <mat-form-field>
     <input matInput [matDatepicker]="picker" placeholder="Choose a date">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
-
+  </mat-form-field>
+-->
+<app-navigation></app-navigation>
   <!-- Footer -->
   <footer>
       ＠fomachanyade/tobimap&nbsp;
@@ -38,16 +57,5 @@
         
       </a>
   </footer>
-</div>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
-
 <router-outlet></router-outlet>
+
