--- a/front/front/src/app/navigation/navigation.component.html
+++ b/front/front/src/app/navigation/navigation.component.html
@@ -12,9 +12,11 @@
 </mat-toolbar>
 <mat-sidenav-container>
     <mat-sidenav mode="side" #sidenav opened>
-    <mat-nav-list>
-        <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
-    </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item routerLink="." *ngFor="let point of mapPointArray">
+                <span class="badge">{{point.order}}</span> {{point.coordinate[0]}}
+            </a>
+        </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <div class="main-content" role="main">
