--- a/front/front/src/app/navigation/navigation.component.sass
+++ b/front/front/src/app/navigation/navigation.component.sass
@@ -6,6 +6,21 @@ mat-toolbar
         padding: 0px 0px 20px 0px
     .header-spacer
         flex: 1 1 auto
+mat-sidenav
+    mat-nav-list
+        .badge 
+            display: inline-block
+            font-size: small
+            color: white
+            padding: 0.8em 0.7em 0 0.7em !important
+            background-color:#405061 !important
+            line-height: 1em
+            position: relative
+            left: -1px
+            top: -4px
+            height: 1.8em
+            margin-right: .8em
+            border-radius: 4px 0 0 4px
 mat-sidenav-content
     height: 88vh
 mat-sidenav, 
