--- a/front/front/src/app/navigation/navigation.component.html
+++ b/front/front/src/app/navigation/navigation.component.html
@@ -13,8 +13,10 @@
 <mat-sidenav-container>
     <mat-sidenav mode="side" #sidenav opened>
         <mat-nav-list>
-            <a mat-list-item routerLink="." *ngFor="let point of mapPointArray">
-                <span class="badge">{{point.order}}</span> {{point.coordinate[0]}}
+            <a mat-list-item routerLink="." 
+                *ngFor="let point of mapPointArray"
+                (click)="editMapPoint(point)">
+                <span class="badge">{{point.order}}</span> {{point.name}}
             </a>
         </mat-nav-list>
     </mat-sidenav>
