--- a/front/front/src/app/navigation/navigation.component.html
+++ b/front/front/src/app/navigation/navigation.component.html
@@ -21,9 +21,6 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <div class="main-content" role="main">
-            <app-map></app-map>
-            <router-outlet></router-outlet>
-        </div>
+        <app-content></app-content>
     </mat-sidenav-content>
 </mat-sidenav-container>  
