MOD: 線描画イベント発火

--- a/front/front/src/app/content/content.component.html
+++ b/front/front/src/app/content/content.component.html
@@ -9,7 +9,7 @@
             </span>
             <ul>
                 <li>
-                    <button mat-flat-button color="primary">星座を書く</button>
+                    <button mat-flat-button color="primary" (click)="drawLine()">星座を書く</button>
                 </li>
             </ul>
             <ul>
