MOD: 地図描画処理のサービスへの委譲

--- a/front/front/src/app/content/content.component.html
+++ b/front/front/src/app/content/content.component.html
@@ -14,7 +14,7 @@
             </ul>
             <ul>
                 <li>
-                    <button mat-flat-button color="primary">星座を保存する</button>
+                    <button mat-flat-button color="primary" (click)="saveMap()">星座を保存する</button>
                 </li>
             </ul> 
         </mat-toolbar-row>
