--- a/front/front/src/app/navigation/navigation.component.sass
+++ b/front/front/src/app/navigation/navigation.component.sass
@@ -22,7 +22,7 @@ mat-sidenav
             margin-right: .8em
             border-radius: 4px 0 0 4px
 mat-sidenav-content
-    height: 88vh
+    height: 100%
 mat-sidenav, 
 mat-sidenav.md-locked-open, 
 mat-sidenav.md-closed.md-locked-open-add-active
