--- a/front/front/src/app/app.component.sass
+++ b/front/front/src/app/app.component.sass
@@ -5,5 +5,5 @@
     box-sizing: border-box
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
-.content
-    padding: 10px 10px
+footer
+    max-height: 3vh
