MOD: コンポーネントにコメントを追加。openleyersにtypeを導入。星座の線の描画をmap-serviceから切り出し

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,4 +1,5 @@
 <div class="main-content" role="main">
+  <!-- メインツールチップ -->
   <mat-toolbar>
     <mat-toolbar-row>
       <button mat-icon-button class="header-icon">
@@ -23,6 +24,7 @@
       </ul>
     </mat-toolbar-row>
   </mat-toolbar>
+  <!-- 地図描画エリア -->
   <app-map></app-map>
   <router-outlet></router-outlet>
 </div>
