MOD: olのバージョンを5.3.3に固定。prettierを適用

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,5 @@
 <div class="main-content" role="main">
-  <!-- メインツールチップ -->
+  <!-- サブツールバー -->
   <mat-toolbar>
     <mat-toolbar-row>
       <button mat-icon-button class="header-icon">
