--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,26 +1,29 @@
 <mat-toolbar color="primary">
-    <mat-toolbar-row>
-        <button mat-icon-button>
-        <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
-        </button>
-        <h1>TobiMap</h1>
-        <span class="header-spacer"></span>
-        <button mat-icon-button class="header-icon">
-            <mat-icon aria-hidden="false" aria-label="user icon">home</mat-icon>
-        </button>  
-    </mat-toolbar-row>
+  <mat-toolbar-row>
+    <button mat-icon-button>
+      <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+    </button>
+    <h1>TobiMap</h1>
+    <span class="header-spacer"></span>
+    <button mat-icon-button class="header-icon">
+      <mat-icon aria-hidden="false" aria-label="user icon">home</mat-icon>
+    </button>
+  </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container>
-    <mat-sidenav mode="side" #sidenav opened>
-        <mat-nav-list>
-            <a mat-list-item routerLink="." 
-                *ngFor="let point of mapPointArray"
-                (click)="editMapPoint(point)">
-                <span class="badge">{{point.order}}</span> {{point.name}}
-            </a>
-        </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-        <app-content></app-content>
-    </mat-sidenav-content>
-</mat-sidenav-container>  
+  <mat-sidenav mode="side" #sidenav opened>
+    <mat-nav-list>
+      <a
+        mat-list-item
+        routerLink="."
+        *ngFor="let point of mapPointArray"
+        (click)="openMapPointModal(point)"
+      >
+        <span class="badge">{{ point.order }}</span> {{ point.name }}
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-content></app-content>
+  </mat-sidenav-content>
+</mat-sidenav-container>
