MOD: サイドナブクリック時のイベントをダイアログから座標フォーカスに変更

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -23,7 +23,7 @@
         routerLink="."
         *ngFor="let point of mapPoints"
         [cdkDragData]="point"
-        (click)="openMapPointModal(point)"
+        (click)="moveCenterToClickedPoint(point)"
         cdkDrag
       >
         <span class="badge">{{ point.order }}</span> {{ point.name }}
