MOD: githubのトップへ遷移するリンクを追加

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,8 +5,8 @@
     </button>
     <h1>TobiMap</h1>
     <span class="header-spacer"></span>
-    <button mat-icon-button class="header-icon">
-      <mat-icon aria-hidden="false" aria-label="user icon">home</mat-icon>
+    <button mat-icon-button>
+      <mat-icon (click)="openInfoPage()">info</mat-icon>  
     </button>
   </mat-toolbar-row>
 </mat-toolbar>
