MOD: footerの文言の位置修正。全体のmarginを削除。地図の高さを調節

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <app-navigation></app-navigation>
   <!-- Footer -->
   <footer>
-      ＠fomachanyade/tobimap&nbsp;
-      <a href="https://github.com/fomachanyade/tobimap2" target="_blank" rel="noopener"> Give our repo a star.
-        
-      </a>
+      ＠fomachanyade/tobimap 2020
   </footer>
 <router-outlet></router-outlet>
 
