--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -6,4 +6,7 @@
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
 footer
-    max-height: 3vh
+    position: absolute
+    right: 1
+    bottom: 0
+    z-index: 2000
